--- a/src/components/Style/App.css
+++ b/src/components/Style/App.css
@@ -201,7 +201,7 @@ img {
   }
 }
 
-.dark-whole-app {
+/* .dark-whole-app {
   background: var(--title-color) !important;
   color: #19a2c1;
-}
+} */
