--- a/src/components/qualification/Qualification.css
+++ b/src/components/qualification/Qualification.css
@@ -26,8 +26,8 @@
 /* Active */
 .qualification__active {
   color: var(--title-color-dark);
-  border: 1px solid var(--title-color);
-  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 0.3rem;
 }
 
 .qualification__sections {
