--- a/src/components/qualification/Qualification.css
+++ b/src/components/qualification/Qualification.css
@@ -15,18 +15,23 @@
   margin: 0 var(--mb-1);
   cursor: pointer;
   padding: 0.1rem;
+  transition: 0.5s;
 }
 .qualification__button:hover {
   color: var(--title-color-dark);
+  color: var(--title-color-dark);
+  border: 1px solid var(--title-color-dark);
+  border-radius: 0.3rem;
 }
 .qualification__icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
 }
+
 /* Active */
 .qualification__active {
   color: var(--title-color-dark);
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--title-color-dark);
   border-radius: 0.3rem;
 }
 
