Added some json configs for github pages

--- a/src/components/Style/App.css
+++ b/src/components/Style/App.css
@@ -11,7 +11,7 @@
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
   --container-color: #fff;
-
+  --box-shadow-img: inset 9px 10px 10px 0.5px rgba(0, 0, 10, 0.21);
   /* ======== Font and typography ======== */
   --body-font: "Poppins", sans-serif;
 
@@ -66,6 +66,10 @@ body.dark .home__social:hover {
   color: hsl(var(--hue), var(--sat), 90%);
 }
 
+/* home img shadow */
+body.dark .home__img {
+  box-shadow: inset 9px 10px 10px 0.5px rgba(244, 244, 247, 0.21);
+}
 /* Dark mode input field */
 body.dark .contact__form-input {
   background-color: hsl(var(--hue), var(--sat), 20%);
