--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -9,11 +9,13 @@
   padding: 1.5rem 2rem;
   margin-bottom: var(--mb-3);
   text-align: center;
+  transition: 0.3s;
 }
 .projects__img {
-  width: 100%;
   border-radius: 0.2rem;
   margin-bottom: var(--mb-1);
+  width: 300px;
+  height: 250px;
 }
 
 .projects__name {
