--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -15,7 +15,7 @@
   border-radius: 0.2rem;
   margin-bottom: var(--mb-1);
   width: 300px;
-  height: 250px;
+  height: 200px;
 }
 
 .projects__name {
@@ -32,7 +32,7 @@
 }
 .projects_social-icon:hover {
   transform: scale(2);
-  color: #00989a;
+  color: var(--title-color-dark);
 }
 
 .projects__description {
@@ -53,6 +53,10 @@
 @media screen and (max-width: 992px) {
   .projects__container {
     width: initial !important;
+  }
+  .projects__img {
+    width: 100% !important;
+    height: 200px !important;
   }
   .projects__card {
     padding: 1.25rem 1.5rem !important;
