--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -157,7 +157,7 @@
   }
 }
 
-/* Small device */
+/* Small device 350px */
 @media screen and (max-width: 350px) {
   .home__img {
     width: 180px;
