--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,40 @@
   align-items: center;
   column-gap: 1rem;
 }
+.nav__logo-img {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid var(--title-color-dark);
+  background-color: var(--container-color);
+  padding: 1.5px;
+  transition: 1s;
+  animation: logo 3s ease-in-out;
+  cursor: pointer;
+}
+.nav__logo-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@keyframes logo {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+.nav__logo-img:hover {
+  background-color: var(--container-color-dark);
+  border: 1px solid var(--title-color);
+  animation: logo 3s ease-in-out infinite;
+}
 
 .nav__logo,
 .nav__toggle {
