--- a/src/components/qualification/Qualification.css
+++ b/src/components/qualification/Qualification.css
@@ -15,12 +15,11 @@
   margin: 0 var(--mb-1);
   cursor: pointer;
   padding: 0.1rem;
-  transition: 0.5s;
+  transition: all 0.3s ease-in-out;
 }
 .qualification__button:hover {
-  color: var(--title-color-dark);
-  color: var(--title-color-dark);
-  border: 1px solid var(--title-color-dark);
+  color: var(--container-color);
+  background-color: var(--title-color);
   border-radius: 0.3rem;
 }
 .qualification__icon {
@@ -30,8 +29,8 @@
 
 /* Active */
 .qualification__active {
-  color: var(--title-color-dark);
-  border: 1px solid var(--title-color-dark);
+  color: var(--container-color);
+  background-color: var(--title-color);
   border-radius: 0.3rem;
 }
 
