--- a/src/components/Style/App.css
+++ b/src/components/Style/App.css
@@ -6,6 +6,7 @@
   /* ======== Colors ======== */
   --hue: 0;
   --sat: 0%;
+  --border-cursor: hsl(var(--hue), var(--sat), 80%);
   --title-color: hsl(var(--hue), var(--sat), 20%);
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
@@ -57,6 +58,7 @@ body.dark {
   --text-color: hsl(var(--hue), var(--sat), 70%);
   --body-color: hsl(var(--hue), var(--sat), 10%);
   --container-color: hsl(var(--hue), var(--sat), 20%);
+  --border-cursor: hsl(var(--hue), var(--sat), 80%);
 }
 
 /* Home Social Icons colors */
@@ -131,6 +133,7 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
+  cursor: none;
 }
 
 h1,
