--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -24,13 +24,13 @@
   padding: 1.5px;
   transition: 1s;
   animation: logo 3s ease-in-out;
-  cursor: none;
+  cursor: pointer;
 }
 .nav__logo-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  cursor: none;
+  cursor: pointer;
 }
 
 @keyframes logo {
@@ -48,14 +48,14 @@
   background-color: var(--container-color-dark);
   border: 1px solid var(--title-color);
   animation: logo 3s ease-in-out infinite;
-  cursor: none;
+  cursor: pointer;
 }
 
 .nav__logo,
 .nav__toggle {
   color: var(--title-color);
   font-weight: var(--font-meduim);
-  cursor: none;
+  cursor: pointer;
 }
 
 .nav__list {
@@ -72,7 +72,7 @@
   font-weight: var(--font-meduim);
   transition: 0.8s;
   padding: 0.3rem;
-  cursor: none;
+  cursor: pointer;
 }
 .nav__icon,
 .nav__close,
@@ -149,7 +149,7 @@
     right: 1.3rem;
     bottom: 0.5rem;
     font-size: 1.5rem;
-    cursor: none;
+    cursor: pointer;
     color: var(--title-color);
   }
   .nav__close:hover {
@@ -157,7 +157,7 @@
   }
   .nav__toggle {
     font-size: 1.1rem;
-    cursor: none;
+    cursor: pointer;
   }
   .nav__icon,
   .nav__close,
@@ -203,7 +203,7 @@
 }
 .toggle-switch .switch {
   position: absolute;
-  cursor: none;
+  cursor: pointer;
   background-color: #b6b6b6;
   border-radius: 25px;
   top: 0;
