--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -65,7 +65,7 @@
   margin-bottom: var(--mb-3);
 }
 .home__img {
-  background: url(../assets/avatar.png);
+  background: url(../assets/avatar1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
